<resources>
    <string name="app_name">newsToutiao</string>
    <string name="bar_title">今日头条</string>
    <string name="index">首页</string>
    <string name="video">视频</string>
    <string name="news">微头条</string>
    <string name="account">账号/E-MAIL</string>
    <string name="z">请输入账号</string>
    <string name="m">请输入密码</string>
    <string name="pwd">密码/password</string>
    <string name="login">登录</string>
    <string name="rem_pwd">记住密码</string>
    <string name="regist">注册</string>
    <string name="年龄">年龄：例 18</string>
    <string name="gender">你的性别：男/女</string>
    <string name="submit">确认提交</string>
    <string name="xsp_show_bt1">播放</string>
    <string name="xsp_show_bt2">暂停</string>
    <string name="xsp_show_bt3">继续</string>
    <string name="xsp_show_bt4">重播</string>
    <string name="notEmpty">账号或密码不能为空</string>
    <string name="login_error">登录失败</string>
    <string name="exit">账号已经存在</string>
    <string name="regist_success">注册成功</string>
    <string name="regist_fail">注册失败</string>
    <string name="ceshi_text1">等等</string>
</resources>
