<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/xinwen"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <EditText
            android:id="@+id/et_account"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:hint="@string/account"
            android:layout_marginTop="150dp"
            android:layout_centerHorizontal="true" />

        <EditText
            android:id="@+id/et_pwd"
            android:hint="@string/pwd"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/et_account"
            android:layout_alignLeft="@+id/et_account"
            />

        <Button
            android:id="@+id/btn_login"
            android:text="@string/login"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_pwd"
            android:layout_alignLeft="@+id/et_pwd"
            />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regist"
            android:layout_below="@+id/btn_login"
            android:layout_alignLeft="@+id/btn_login"
            android:textSize="20dp"
            android:layout_marginTop="20dp"
            />


        <CheckBox
            android:id="@+id/remember_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rem_pwd"
            android:layout_alignTop="@+id/textView3"
            android:layout_alignRight="@+id/btn_login"
            />

    </RelativeLayout>

</RelativeLayout>
