<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



    <SurfaceView
        android:id="@+id/sv1"
        android:layout_width="match_parent"
        android:layout_height="300dp" />
    <SeekBar
        android:id="@+id/seekbar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/xsp_bf_bt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xsp_show_bt1"/>
        <Button
            android:id="@+id/xsp_bf_bt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xsp_show_bt2"/>
        <Button
            android:id="@+id/xsp_bf_bt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xsp_show_bt3"/>
        <Button
            android:id="@+id/xsp_bf_bt4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xsp_show_bt4"/>

    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@mipmap/xsp_img1"/>
    <TextView
        android:id="@+id/bf_test1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/ceshi_text1" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>
