<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="56dp"
              android:orientation="horizontal"
              >

    <LinearLayout
        android:id="@+id/main_tab_index"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/main_tab_index_img"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/colorPrimary"
            android:clickable="false"
            android:scaleType="centerInside"
            android:src="@mipmap/index_pressed"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/index"
            android:textColor="#000"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_tab_video"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <ImageButton
            android:id="@+id/main_tab_video_img"
            android:scaleType="centerInside"
            android:src="@mipmap/index_normal"
            android:layout_height="40dp"
            android:clickable="false"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video"
            android:textColor="#000"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/main_tab_news"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_height="match_parent"
        android:orientation="vertical"
         >

        <ImageButton
            android:id="@+id/main_tab_news_img"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/colorPrimary"
            android:clickable="false"
            android:scaleType="centerInside"
            android:src="@mipmap/index_normal"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news"
            android:textColor="#000"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_tab_small_video"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/main_tab_small_video_img"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/colorPrimary"
            android:clickable="false"
            android:scaleType="centerInside"
            android:src="@mipmap/index_normal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="小视频"
            android:textColor="#000"/>
    </LinearLayout>

</LinearLayout>
